--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>ua_parser</groupId>
   <artifactId>ua-parser</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>1.2.2</version>
   <name>ua-parser</name>
   <url>https://github.com/tobie/ua-parser/</url>
   <properties>
@@ -38,6 +38,16 @@
           <source>1.6</source>
           <target>1.6</target>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals><goal>jar</goal></goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
