--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ua_parser</groupId>
-  <artifactId>ua-parser</artifactId>
+  <groupId>org.uaparser</groupId>
+  <artifactId>ua_parser</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1-SNAPSHOT</version>
+  <version>1.4.0</version>
   <name>ua-parser</name>
-  <url>https://github.com/tobie/ua-parser/</url>
+  <url>https://github.com/ua-parser/uap-java</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <build>
     <resources>
       <resource>
-        <targetPath>ua_parser</targetPath>
-        <directory>${basedir}/../uap-core</directory>
+        <targetPath>org/uaparser/ua_parser</targetPath>
+        <directory>${basedir}/uap-core</directory>
         <includes>
           <include>regexes.yaml</include>
         </includes>
@@ -22,15 +22,15 @@
     </resources>
     <testResources>
       <testResource>
-        <targetPath>ua_parser</targetPath>
-        <directory>${basedir}/../uap-core/test_resources</directory>
+        <targetPath>org/uaparser/ua_parser</targetPath>
+        <directory>${basedir}/uap-core/tests</directory>
         <includes>
           <include>*.yaml</include>
         </includes>
       </testResource>
       <testResource>
-        <targetPath>ua_parser</targetPath>
-        <directory>${basedir}/../uap-core/tests</directory>
+        <targetPath>org/uaparser/ua_parser</targetPath>
+        <directory>${basedir}/uap-core/test_resources</directory>
         <includes>
           <include>*.yaml</include>
         </includes>
@@ -83,4 +83,8 @@
       <version>3.2.1</version>
     </dependency>
   </dependencies>
+  <organization>
+  	<name>org.uaparser</name>
+  	<url>http://uaparser.org</url>
+  </organization>
 </project>
