--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,47 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ua_parser</groupId>
-  <artifactId>ua-parser</artifactId>
+  <groupId>com.github.ua-parser</groupId>
+  <artifactId>uap-java</artifactId>
   <packaging>jar</packaging>
   <version>1.3.1-SNAPSHOT</version>
-  <name>ua-parser</name>
-  <url>https://github.com/tobie/ua-parser/</url>
+  <name>User Agent Parser for Java</name>
+  
+  <description>
+  	Java implementation of the UA Parser library. Derives operating system, browser and device
+  	metadata from a user-agent string. This library consumes the regular expression
+  	rules defined in https://github.com/ua-parser/uap-core.
+  </description>
+  
+  <licenses>
+    <license>
+  	  <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+  
+  <developers>
+    <developer>
+      <name>Benjamin Possolo</name>
+      <email>bpossolo@gmail.com</email>
+      <organization>UA Parser</organization>
+      <organizationUrl>https://github.com/ua-parser</organizationUrl>
+    </developer>
+  </developers>
+  
+  <url>https://github.com/ua-parser/uap-java</url>
+  
+  <scm>
+    <connection>scm:git:git://github.com/ua-parser/uap-java.git</connection>
+    <developerConnection>scm:git:ssh://github.com:ua-parser/uap-java.git</developerConnection>
+    <url>http://github.com/ua-parser/uap-java/tree/master</url>
+  </scm>
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
   <build>
     <resources>
       <resource>
