--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
   <packaging>jar</packaging>
   <version>1.4.1-SNAPSHOT</version>
   <name>User Agent Parser for Java</name>
-  
   <description>
   	Java implementation of the UA Parser library. Derives operating system, browser and device
   	metadata from a user-agent string. This library consumes the regular expression
@@ -93,9 +92,31 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.0.0-M3</version>
+      <configuration>
+        <skipTests>true</skipTests>
+      </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>com.allen.capturewebdata.Main</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
-  
+
+
   <profiles>
     <profile>
       <id>ossrh</id>
@@ -118,7 +139,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1</version>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
