Switch CachingParser from LRUMap to Caffeine

--- a/pom.xml
+++ b/pom.xml
@@ -158,9 +158,9 @@
       <version>1.33</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-collections4</artifactId>
-      <version>4.4</version>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
+      <version>3.1.5</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
