--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.github.ua-parser</groupId>
   <artifactId>uap-java</artifactId>
   <packaging>jar</packaging>
-  <version>1.5.5-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>User Agent Parser for Java</name>
   
   <description>
@@ -56,17 +56,14 @@
   </properties>
   
   <build>
-    <resources>
-      <resource>
+    <testResources>
+      <testResource>
         <targetPath>ua_parser</targetPath>
         <directory>${basedir}/uap-core</directory>
         <includes>
           <include>regexes.yaml</include>
         </includes>
-      </resource>
-    </resources>
-    
-    <testResources>
+      </testResource>
       <testResource>
         <targetPath>ua_parser</targetPath>
         <directory>${basedir}/uap-core/test_resources</directory>
@@ -153,14 +150,15 @@
   
   <dependencies>
     <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
-      <version>1.33</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
       <version>4.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>2.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
