--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
         <version>3.11.0</version>
         <configuration>
           <source>${java.version}</source>
-          <target>${java.version}</target>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
