--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>11</java.version>
+    <java.version>1.8</java.version>
   </properties>
   
   <build>
@@ -91,7 +91,7 @@
         <version>3.11.0</version>
         <configuration>
           <source>${java.version}</source>
-          <target>1.8</target>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
     </plugins>
